Fixed visible text issue on images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,10 @@ img {
     margin-bottom: 60px;
 }
 
+.carousel-item span {
+    color: black;
+    background-color: #fff;
+}
 
 /*------------------------Footer------------------------*/
 
